--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "MyGLCanvas",
   "version": "0.0.01",
   "dependencies": {
+    "lygia": "^1.1.3",
     "three": "^0.165.0"
   },
   "devDependencies": {
